univesities database populated with 2130 objects

--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,7 @@
 # [START django_app]
 # [START gaestd_py_django_app_yaml]
 runtime: python310
+instance_class: F2
 
 env_variables:
   # This setting is used in settings.py to configure your ALLOWED_HOSTS
