--- a/.gcloudignore
+++ b/.gcloudignore
@@ -12,8 +12,11 @@
 # below:
 .git
 .gitignore
-
+node_modules
 # Python pycache:
 __pycache__/
 # Ignored by the build system
 /setup.cfg
+package-lock.json
+compo-frontend/components
+compo-frontend/pages
