--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ certifi==2022.6.15
 cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==37.0.2
-Django==4.0.4
+Django==3.2.13
 django-autoslug==1.9.8
 django-dotenv==1.4.2
 django-environ==0.8.1
@@ -17,6 +17,7 @@ djangorestframework-simplejwt==5.2.0
 google-api-core==2.8.2
 google-auth==2.8.0
 google-cloud-secret-manager==2.11.1
+django-storages[google]==1.12.3
 googleapis-common-protos==1.56.2
 grpc-google-iam-v1==0.12.4
 grpcio==1.46.3
@@ -48,3 +49,4 @@ trio==0.21.0
 trio-websocket==0.9.2
 urllib3==1.26.9
 wsproto==1.1.0
+gunicorn==20.1.0
