--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/poppins": "^4.5.8",
     "antd": "^4.21.3",
     "framer-motion": "^6",
     "next": "12.1.6",
@@ -30,5 +31,4 @@
   "engines": {
     "node": "16.x.x"
   }
-  
 }
