--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "composite",
+  "name": "composite-landing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@fontsource/poppins": "^4.5.8",
-    "antd": "^4.21.3",
-    "framer-motion": "^6",
+    "framer-motion": "^6.3.16",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-icons": "^4.4.0",
-    "react-table": "^7.8.0",
-    "sharp": "0.30.7"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.17.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
-    "sass": "^1.52.3"
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   },
   "engines": {
     "node": "16.x.x"
