--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
