--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
