--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
+    "@mui/styled-engine-sc": "^5.8.0",
     "animate.css": "^4.1.1",
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tw-elements": "^1.0.0-alpha12"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
