--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -14,7 +14,10 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@mui/styles": "^5.8.7",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "animate.css": "^4.1.1",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
     "react": "18.2.0",
