--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -16,10 +16,10 @@
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/styles": "^5.8.7",
     "@mui/x-date-pickers": "^5.0.0-alpha.7",
+    "@reduxjs/toolkit": "^1.8.3",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
-    "@reduxjs/toolkit": "^1.8.3",
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
@@ -30,6 +30,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sharp": "^0.30.7",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
