--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "rm -rf ./build && NODE_ENV=production next build",
     "start": "next start -p 8080",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev-build": "next build"
   },
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -24,6 +25,7 @@
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
+    "react-alice-carousel": "^2.6.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
