--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
+    "countries-list": "^2.6.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.3.16",
     "next": "12.1.6",
