--- a/compo-frontend/next.yaml
+++ b/compo-frontend/next.yaml
@@ -12,8 +12,8 @@ resources:
     cpu: 1
     memory_gb: 2
     disk_size_gb: 10
-# readiness_check:
-#   app_start_timeout_sec: 1800
+readiness_check:
+    app_start_timeout_sec: 1800
 handlers:
 - url: /static
   static_dir: static
