--- a/compo-frontend/package.json
+++ b/compo-frontend/package.json
@@ -29,6 +29,7 @@
     "react-alice-carousel": "^2.6.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.33.1",
+    "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
